--- a/final project/templates/python.html
+++ b/final project/templates/python.html
@@ -97,7 +97,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <details>
+        <details open>
             <summary> <span id="arrow1">▶</span> Click to navigate</summary>
             <a href="#placeholder1">History of Python</a><br>
             <a href="#placeholder2">Examples</a><br>
@@ -105,7 +105,7 @@
     </div>
 
     <div class="main">
-        <details>
+        <details open>
             <summary><p id="placeholder1"> <span id="arrow2">▶</span>History of Python</p></summary>
             <h1>1990: Birth of Python</h1>
             December 1989:<br>
@@ -175,7 +175,7 @@ Python’s design philosophy of simplicity and readability, along with its vast 
         </details>
 <br><br><br><br><br>
 <br><br><br><br><br>
-        <details>
+        <details open>
             <summary> <p id="placeholder2"><span id="arrow3">▶</span>Examples</p></summary>
                 <div class="container">
                     <div class="chart-block">
