--- a/final project/templates/html.html
+++ b/final project/templates/html.html
@@ -97,7 +97,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <details>
+        <details open>
             <summary> <span id="arrow1">▶</span> Click to navigate</summary>
             <a href="#placeholder1">History</a><br>
             <a href="#placeholder2">Examples</a><br>
@@ -105,7 +105,7 @@
     </div>
 
     <div class="main">
-        <details>
+        <details open>
             <summary><p id="placeholder1"> <span id="arrow2">▶</span>History</p></summary>
             <h1>1989–1990: The Conception of HTML</h1>
 1989:<br>
@@ -177,7 +177,7 @@ HTML, alongside CSS and JavaScript, forms the backbone of web development. Its f
         </details>
 <br><br><br><br><br>
 <br><br><br><br><br>
-        <details>
+        <details open>
             <summary> <p id="placeholder2"><span id="arrow3">▶</span>Examples</p></summary>
             <h2>Tables</h2><br>
             <table border="1">
