--- a/final project/templates/cSharp.html
+++ b/final project/templates/cSharp.html
@@ -97,7 +97,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <details>
+        <details open>
             <summary> <span id="arrow1">▶</span> Click to navigate</summary>
             <a href="#placeholder1">History</a><br>
             <a href="#placeholder2">Examples</a><br>
@@ -105,7 +105,7 @@
     </div>
 
     <div class="main">
-        <details>
+        <details open>
             <summary><p id="placeholder1"> <span id="arrow2">▶</span>History</p></summary>
             <h1>Late 1980s–Early 1990s: The Origins of C#</h1>
 1988:<br>
@@ -209,7 +209,7 @@ As of today, C# is recognized for its balance of performance, safety, and ease o
         </details>
 <br><br><br><br><br>
 <br><br><br><br><br>
-        <details>
+        <details open>
             <summary> <p id="placeholder2"><span id="arrow3">▶</span>Examples</p></summary>
             this is placeholder2.
         </details>
