--- a/final project/templates/cPlusPlus.html
+++ b/final project/templates/cPlusPlus.html
@@ -97,7 +97,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <details>
+        <details open>
             <summary> <span id="arrow1">▶</span> Click to navigate</summary>
             <a href="#placeholder1">History</a><br>
             <a href="#placeholder2">Examples</a><br>
@@ -105,7 +105,7 @@
     </div>
 
     <div class="main">
-        <details>
+        <details open>
             <summary><p id="placeholder1"> <span id="arrow2">▶</span>History</p></summary>
             
 <h1>1970s: The Origins of C++</h1>
@@ -203,7 +203,7 @@ C++ remains one of the most powerful and widely used programming languages, espe
         </details>
 <br><br><br><br><br>
 <br><br><br><br><br>
-        <details>
+        <details open>
             <summary> <p id="placeholder2"><span id="arrow3">▶</span>Examples</p></summary>
             this is placeholder2.
         </details>
