--- a/final project/templates/python.html
+++ b/final project/templates/python.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <style>
         .sidebar {
             height: 100%;
