--- a/final project/templates/python.html
+++ b/final project/templates/python.html
@@ -62,11 +62,6 @@
             border-radius: 5px;
             overflow-x: auto;
         }
-        .container {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-        }
         .form-block, .chat-block, .chart-block {
             width: 45%;
             margin: 20px;
@@ -98,7 +93,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <details>
+        <details open>
             <summary> <span id="arrow1">▶</span> Click to navigate</summary>
             <a href="#placeholder1">History of Python</a><br>
             <a href="#placeholder2">Examples</a><br>
@@ -106,7 +101,7 @@
     </div>
 
     <div class="main">
-        <details>
+        <details open>
             <summary><p id="placeholder1"> <span id="arrow2">▶</span>History of Python</p></summary>
             <h1>1990: Birth of Python</h1>
             December 1989:<br>
@@ -176,7 +171,7 @@ Python’s design philosophy of simplicity and readability, along with its vast 
         </details>
 <br><br><br><br><br>
 <br><br><br><br><br>
-        <details>
+        <details open>
             <summary> <p id="placeholder2"><span id="arrow3">▶</span>Examples</p></summary>
                 <div class="container">
                     <div class="form-block">
@@ -188,11 +183,7 @@ Python’s design philosophy of simplicity and readability, along with its vast 
                             <input type="email" id="email" name="email"><br>
                             <input type="submit" value="Submit">
                         </form>
-                        {% if name and email %}
-                        <p>Name: {{ name }}</p>
-                        <p>Email: {{ email }}</p>
-                        {% endif %}
-                    </div><br><br>
+                    </div><br>
     
     
                                 <div class="code-block">
@@ -227,8 +218,9 @@ Python’s design philosophy of simplicity and readability, along with its vast 
         graph = pyo.plot(fig, output_type='div')
         return graph
                     </code></pre>
-                                </div><br><br>
+                                </div><br>
                 <div class="chat-block">
+                
         <h2>Real-time Chat</h2>
         <ul id="messages"></ul>  
         <form id="form" action="">
