--- a/final project/templates/javascript.html
+++ b/final project/templates/javascript.html
@@ -97,8 +97,7 @@
 </head>
 <body>
     <div class="sidebar">
-                <a href="https://final-project-t0jo.onrender.com">Back to Index</a>
-        <details open>
+        <details>
             <summary> <span id="arrow1">▶</span> Click to navigate</summary>
             <a href="#placeholder1">History</a><br>
             <a href="#placeholder2">Examples</a><br>
@@ -106,7 +105,7 @@
     </div>
 
     <div class="main">
-        <details open>
+        <details>
             <summary><p id="placeholder1"> <span id="arrow2">▶</span>History</p></summary>
             <h1>1990s: The Birth of JavaScript</h1>
 1995:<br>
@@ -209,9 +208,48 @@ JavaScript remains the most widely used language in the world, and its ecosystem
         </details>
 <br><br><br><br><br>
 <br><br><br><br><br>
-        <details open>
+        <details>
             <summary> <p id="placeholder2"><span id="arrow3">▶</span>Examples</p></summary>
-            this is placeholder2.
+            <h2>Alert Box</h2><br>
+            <button onclick="showAlert()">Click Me</button>
+            <br><br> The code looks like:
+            <div class="code-block">
+                <pre><code>
+            &lt;img id="image" width="300" src="https://via.placeholder.com/300" onclick="changeImage()"&gt;<br>
+            function changeImage() 
+                document.getElementById("image").src = "https://via.placeholder.com/300/FF0000/FFFFFF";<br>
+            </code></pre>
+            </div>
+
+            <h2>Change Text Example</h2><br>
+<button onclick="changeText()">Click to Change Text</button>
+<p id="text">This is some text.</p>
+<br><br> The code looks like:
+<div class="code-block">
+    <pre><code>
+&lt;button onclick="changeText()"&gt;Click to Change Text&lt;/button&gt;
+&lt;p id="text"&gt;This is some text.&lt;/p&gt;
+
+function changeText() {
+    document.getElementById("text").innerHTML = "The text has been changed!";
+}
+&lt;/script&gt;
+    </code></pre>
+</div>
+<h2>Change Image Example</h2><br>
+<img id="image" width="300" src="https://via.placeholder.com/300" alt="placeholder" onclick="changeImage()">
+<br><br> The code looks like:
+
+<div class="code-block">
+    <pre><code>
+&lt;img id="image" width="300" src="https://via.placeholder.com/300" onclick="changeImage()"&gt;
+
+function changeImage() {
+    document.getElementById("image").src = "https://via.placeholder.com/300/FF0000/FFFFFF";
+}
+&lt;/script&gt;
+    </code></pre>
+</div>
         </details>
 <br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br>
@@ -235,6 +273,15 @@ JavaScript remains the most widely used language in the world, and its ecosystem
                 }
             });
         });
+        function showAlert() {
+    alert("Hello, this is an alert!");
+}
+function changeText() {
+    document.getElementById("text").innerHTML = "The text has been changed!";
+}
+function changeImage() {
+    document.getElementById("image").src = "https://via.placeholder.com/300/FF0000/FFFFFF";
+}
     </script>
 </body>
 </html>
