--- a/final project/templates/javascript.html
+++ b/final project/templates/javascript.html
@@ -97,6 +97,7 @@
 </head>
 <body>
     <div class="sidebar">
+                        <a href="https://final-project-t0jo.onrender.com">Back to Index</a>
         <details>
             <summary> <span id="arrow1">▶</span> Click to navigate</summary>
             <a href="#placeholder1">History</a><br>
