--- a/final project/templates/python.html
+++ b/final project/templates/python.html
@@ -93,6 +93,7 @@
 </head>
 <body>
     <div class="sidebar">
+                        <a href="https://final-project-t0jo.onrender.com">Back to Index</a>
         <details open>
             <summary> <span id="arrow1">▶</span> Click to navigate</summary>
             <a href="#placeholder1">History of Python</a><br>
