--- a/final project/templates/javascript.html
+++ b/final project/templates/javascript.html
@@ -97,8 +97,7 @@
 </head>
 <body>
     <div class="sidebar">
-                        <a href="https://final-project-t0jo.onrender.com">Back to Index</a>
-        <details open>
+        <details>
             <summary> <span id="arrow1">▶</span> Click to navigate</summary>
             <a href="#placeholder1">History</a><br>
             <a href="#placeholder2">Examples</a><br>
@@ -106,7 +105,7 @@
     </div>
 
     <div class="main">
-        <details open>
+        <details>
             <summary><p id="placeholder1"> <span id="arrow2">▶</span>History</p></summary>
             <h1>1990s: The Birth of JavaScript</h1>
 1995:<br>
@@ -209,7 +208,7 @@ JavaScript remains the most widely used language in the world, and its ecosystem
         </details>
 <br><br><br><br><br>
 <br><br><br><br><br>
-        <details open>
+        <details>
             <summary> <p id="placeholder2"><span id="arrow3">▶</span>Examples</p></summary>
             <h2>Alert Box</h2><br>
             <button onclick="showAlert()">Click Me</button>
@@ -238,7 +237,7 @@ function changeText() {
     </code></pre>
 </div>
 <h2>Change Image Example</h2><br>
-<img id="image" width="300" src="https://via.placeholder.com/300" alt="placeholder" onclick="changeImage()">
+<img id="image" width="300" src="https://th.bing.com/th?id=OIP.F9_DNan44nfcXSL5q-_jxQHaHi&w=247&h=252&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2" alt="placeholder" onclick="changeImage()">
 <br><br> The code looks like:
 
 <div class="code-block">
@@ -281,7 +280,7 @@ function changeText() {
     document.getElementById("text").innerHTML = "The text has been changed!";
 }
 function changeImage() {
-    document.getElementById("image").src = "https://via.placeholder.com/300/FF0000/FFFFFF";
+    document.getElementById("image").src = "https://th.bing.com/th?id=OIP.CwqCnOYJUyYYhI3o9iWoaQHaHa&w=250&h=250&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2";
 }
     </script>
 </body>
