--- a/final project/templates/javascript.html
+++ b/final project/templates/javascript.html
@@ -97,7 +97,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <details>
+        <details open>
             <summary> <span id="arrow1">▶</span> Click to navigate</summary>
             <a href="#placeholder1">History</a><br>
             <a href="#placeholder2">Examples</a><br>
@@ -105,7 +105,7 @@
     </div>
 
     <div class="main">
-        <details>
+        <details open>
             <summary><p id="placeholder1"> <span id="arrow2">▶</span>History</p></summary>
             <h1>1990s: The Birth of JavaScript</h1>
 1995:<br>
@@ -208,7 +208,7 @@ JavaScript remains the most widely used language in the world, and its ecosystem
         </details>
 <br><br><br><br><br>
 <br><br><br><br><br>
-        <details>
+        <details open>
             <summary> <p id="placeholder2"><span id="arrow3">▶</span>Examples</p></summary>
             <h2>Alert Box</h2><br>
             <button onclick="showAlert()">Click Me</button>
