--- a/final project/templates/python.html
+++ b/final project/templates/python.html
@@ -93,7 +93,7 @@
 </head>
 <body>
     <div class="sidebar">
-                        <a href="https://final-project-t0jo.onrender.com">Back to Index</a>
+        <a href="https://final-project-t0jo.onrender.com">Back to Index</a>
         <details open>
             <summary> <span id="arrow1">▶</span> Click to navigate</summary>
             <a href="#placeholder1">History of Python</a><br>
@@ -159,7 +159,7 @@ Machine learning and data science saw a surge in Python usage, thanks to librari
 January 1, 2020:<br>
 Official support for Python 2 ended, marking a significant shift as users transitioned to Python 3.<br><br><br>
 
-<h1>2021 and Beyond: Modern Python</h1>
+<h1>2021 and Beyond: Modern Python (Python 3.0)</h1>
 2021:<br>
 Python became one of the most popular programming languages globally, used extensively in machine learning, web development, automation, and education.<br>
 2023:<br>
