--- a/final project/templates/cSharp.html
+++ b/final project/templates/cSharp.html
@@ -53,7 +53,7 @@
             color: #5f5d5d;
             display: block;
         }
-        .code-block {
+        pre {
             color: #44e23e;
             background-color: #3b3b3b;
             border: 2px solid #000000;
@@ -97,7 +97,7 @@
 </head>
 <body>
     <div class="sidebar">
-                <a href="https://final-project-t0jo.onrender.com">Back to Index</a>
+        <a href="https://final-project-t0jo.onrender.com">Back to Index</a>
         <details open>
             <summary> <span id="arrow1">▶</span> Click to navigate</summary>
             <a href="#placeholder1">History</a><br>
@@ -212,7 +212,21 @@ As of today, C# is recognized for its balance of performance, safety, and ease o
 <br><br><br><br><br>
         <details open>
             <summary> <p id="placeholder2"><span id="arrow3">▶</span>Examples</p></summary>
-            this is placeholder2.
+            <h2>C# Example Code</h2>
+            This would print "Hello,World!" on a blank page.
+
+<pre>
+<code>
+// This is a simple C# example
+using System;
+
+class Program {
+    static void Main() {
+        Console.WriteLine("Hello, World!");
+    }
+}
+</code>
+</pre>
         </details>
 <br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br>
