--- a/final project/templates/cPlusPlus.html
+++ b/final project/templates/cPlusPlus.html
@@ -93,6 +93,15 @@
             list-style-type: none;
             padding: 0;
         }
+        pre {
+            color: #44e23e;
+            background-color: #3b3b3b;
+            border: 2px solid #000000;
+            padding: 20px;
+            font-family: "Courier New", monospace;
+            white-space: pre-wrap;
+            word-wrap: break-word;
+        }
     </style>
 </head>
 <body>
@@ -206,7 +215,20 @@ C++ remains one of the most powerful and widely used programming languages, espe
 <br><br><br><br><br>
         <details open>
             <summary> <p id="placeholder2"><span id="arrow3">▶</span>Examples</p></summary>
-            this is placeholder2.
+            <h1>C++ Example Code</h1>
+This would print "Hello, World!" onto a blank page.
+<pre>
+<code>
+// This is a simple C++ example
+#include &lt;iostream&gt;
+using namespace std;
+
+int main() {
+    cout &lt;&lt; "Hello, World!" &lt;&lt; endl;
+    return 0;
+}
+</code>
+</pre>
         </details>
 <br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br>
